--- a/dev.my-service.env
+++ b/dev.my-service.env
@@ -1,7 +1,7 @@
 HOST=my-service
 PORT=4000
-DB_HOST=my-postgres
-DB_PORT=5432
-DB_NAME=my_service_db
-DB_USER=postgres
-DB_PASSWORD=postgres
+PGHOST=my-postgres
+PGPORT=5432
+PGDATABASE=my_service_db
+PGUSER=postgres
+PGPASSWORD=postgres
